--- a/shopping/package.json
+++ b/shopping/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "element-ui": "^2.13.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.0.1",
     "vuex": "^3.3.0"
   },
